--- a/FRONTEND/bemutatkozas.css
+++ b/FRONTEND/bemutatkozas.css
@@ -26,6 +26,7 @@ body {
     font-size: 0.9rem;
     letter-spacing: 0.5px;
     border-bottom: 3px solid olive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar-menu {
@@ -110,6 +111,7 @@ body {
 }
 
 /* === BELSŐ TARTALOM === */
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
