--- a/FRONTEND/kosar.css
+++ b/FRONTEND/kosar.css
@@ -23,6 +23,8 @@ body {
     font-size: 0.9rem;
     letter-spacing: 0.5px;
     border-bottom: 3px solid olive;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .navbar-menu {
